fixed the problem of overflow in login/forgotpwd page for smaller devices (#457)
* fixed the problem of overflow in login/forgotpwd page for smaller devices

* made some changes

--- a/frontend/src/styles/components/ForgotPasswordPage.css
+++ b/frontend/src/styles/components/ForgotPasswordPage.css
@@ -1,3 +1,7 @@
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .forgotpwd {
   position: relative;
   min-height: 100vh;
@@ -86,6 +90,7 @@
 }
 
 .forgotpwd__footer {
+  overflow-x: hidden;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -197,6 +202,10 @@
   left: 50%;
   z-index: 1;
   position: absolute;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
 
 .forgotpwd__footerIcon:hover .tooltip-text {
